--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "react_starter_repo",
+  "name": "goit-react-hw-06-phonebook",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.2",
@@ -13,6 +14,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.1",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
