--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.1",
     "redux-persist": "^6.0.0",
+    "uuidv4": "^6.2.6",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
